# COC_TRPG_ROLE_CREATETOOL

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  streamlit_app.py
TRPG/: README.md  main.py
TRPG/dice_calc/: __init__.py  calculator.py  cli.py  coc_data.py  comparator.py  distribution.py  parser.py
TRPG/tests/: test_dice_calc.py
dice_calc/: __init__.py  calculator.py  cli.py  coc_data.py  comparator.py  distribution.py  parser.py  streamlit_ui.py
docs/: index.html
docs/css/: style.css
docs/js/: app.js  calculator.js  coc_data.js  comparator.js  distribution.js  parser.js  test.js
tests/: test_cli.py  test_dice_calc.py
